--- a/css/style.css
+++ b/css/style.css
@@ -10334,7 +10334,7 @@ h2.title-modern > span {
 
 .team-classic-figure img {
   width: 100%;
-  filter: grayscale(100%);
+  /* filter: grayscale(100%); */
   transition: all 0.3s ease;
 }
 
@@ -10348,6 +10348,7 @@ h2.title-modern > span {
   margin-left: -25px;
   padding: 15px 20px 15px 50px;
   transition: all 0.3s ease;
+  transform: skew(10deg);
   z-index: 1;
 }
 
@@ -10358,7 +10359,7 @@ h2.title-modern > span {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(17, 17, 17, 0.5);
+  /* background-color: rgba(17, 17, 17, 0.5); */
   transform: skew(10deg);
   transform-origin: 50% 100%;
   z-index: -1;
