fix : some anchor images are grayed out

--- a/css/style.css
+++ b/css/style.css
@@ -21156,3 +21156,269 @@ disabled look for disabled choices in the results dropdown
 .modal-body {
   padding: 29px 30px 35px;
 }
+
+.hvcard {
+  border-radius: 1rem !important;
+  cursor: pointer;
+}
+
+.banner {
+  background-color: #2d2d2d;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.logo {
+  max-height: 100px;
+  position: absolute;
+}
+
+.logo2 {
+  max-height: 100px;
+}
+
+@media (min-width: 768px) {
+  /* pc */
+  .logo-nexus {
+    height: 85px !important;
+    width: 95px !important;
+  }
+
+  .ui-to-top {
+    padding: 1rem;
+  }
+
+  .banner {
+    position: relative;
+    height: 12vh;
+  }
+
+  .phoneLogo {
+    background-color: transparent;
+    position: absolute;
+    /* left: 47%; */
+    /* right: 40%; */
+    top: 46%;
+    width: 100%;
+    z-index: 1000000;
+  }
+}
+
+@media (max-width: 767.98px) {
+  /* phone */
+  .logo-nexus {
+    height: 51px !important;
+    width: 56px !important;
+  }
+  .poster {
+    object-fit: contain;
+    margin-top: 5rem;
+    padding: 0.5rem;
+  }
+  .prods {
+    margin-top: -5rem;
+  }
+
+  .ui-to-top {
+    padding: 0.5rem;
+  }
+
+  .banner {
+    position: relative;
+    height: 12vh;
+  }
+
+  .phoneLogo {
+    background-color: transparent;
+    position: absolute;
+    /* left: 37%; */
+    width: 100%;
+    top: 43%;
+    z-index: 1000000;
+  }
+
+  .rd-navbar-fixed .rd-navbar-panel {
+    height: 12vh;
+  }
+}
+
+.ie-panel {
+  display: none;
+  background: #212121;
+  padding: 10px 0;
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.3);
+  clear: both;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.swiper-slider-classic .swiper-pagination-bullet::after {
+  background: rgb(250, 128, 36);
+  color: white;
+
+  background: linear-gradient(
+    283deg,
+    rgba(250, 128, 36, 1) 0%,
+    rgba(254, 28, 34, 1) 33%,
+    rgba(69, 32, 38, 1) 75%,
+    rgba(39, 34, 36, 1) 100%
+  );
+}
+
+.button-primary.button-pipaluk::before {
+  color: white;
+  background: linear-gradient(
+    to bottom right,
+    #f54ea2,
+    #ff4e50,
+    #ff4e50,
+    #ffb300
+  );
+}
+
+/* Style the select element */
+.form-control {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  position: relative;
+  /* Add this line */
+}
+
+/* Style the dropdown arrow */
+.form-control::after {
+  content: "\25BC";
+  /* Unicode character for a downward-pointing arrow */
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+/* Add the carat symbol */
+.form-control::before {
+  content: "\25B2";
+  /* Unicode character for an upward-pointing arrow */
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  pointer-events: none;
+  color: #333;
+  /* Customize the color if needed */
+}
+
+.dropdown-toggle {
+  border: 0;
+  /* Add other styles as needed */
+}
+
+html.ie-10 .ie-panel,
+html.lt-ie-10 .ie-panel {
+  display: block;
+}
+
+.rd-navbar-classic.rd-navbar-static .rd-nav-link::before {
+  background: white;
+}
+
+.rd-navbar-classic.rd-navbar-static .rd-navbar-main {
+  justify-content: center !important;
+}
+
+.box-contacts-icon {
+  color: linear-gradient(
+    283deg,
+    rgba(250, 128, 36, 1) 0%,
+    rgba(254, 28, 34, 1) 33%,
+    rgba(69, 32, 38, 1) 75%,
+    rgba(39, 34, 36, 1) 100%
+  ) !important;
+}
+
+.custom-container {
+  background-color: red;
+  color: white;
+}
+
+.rd-navbar-fixed .rd-navbar-panel {
+  background: #2d2d2d !important;
+  color: white;
+}
+
+.gradCol {
+  background: rgb(250, 128, 36);
+  color: white;
+
+  background: linear-gradient(
+    283deg,
+    rgba(250, 128, 36, 1) 0%,
+    rgba(254, 28, 34, 1) 33%,
+    rgba(69, 32, 38, 1) 75%,
+    rgba(39, 34, 36, 1) 100%
+  );
+}
+
+.gradCol2 {
+  background: linear-gradient(
+    to bottom right,
+    #f54ea2,
+    #ff4e50,
+    #ff4e50,
+    #ffb300
+  );
+}
+
+.ui-to-top {
+  background: linear-gradient(
+    to bottom right,
+    #f54ea2,
+    #ff4e50,
+    #ff4e50,
+    #ffb300
+  );
+  color: white;
+  align-items: center;
+  justify-content: center;
+}
+
+.alert {
+  background-color: pink;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  border-left: 2px solid red;
+}
+
+#carouselExampleIndicators {
+  width: 85%;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  /* height: 30vh; */
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Adjust transparency here */
+  pointer-events: none;
+  /* Allows clicks to pass through */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  /* Text color inside overlay */
+}
