--- a/css/style.css
+++ b/css/style.css
@@ -21282,9 +21282,9 @@ img:hover {
 
   .rd-navbar-fixed .rd-navbar-panel {
     height: 18vh;
-    width: 22rem;
-    margin-left: -0.5rem;
-    margin-top: -0.5rem;
+    /* width: 22rem; */
+    /* margin-left: -0.5rem;
+    margin-top: -0.5rem; */
   }
 }
 
